# __mping

./: .cmake-format.py  .gitmodules  AUTHORS  CMakeLists.txt  CMakePresets.json  README.md
docs/: Doxyfile  main.dox  parameter_handling.md  resize_policy.dox
docs/guidelines/: coding_guidelines.md  contribution_guidelines.md  documentation_guidelines.md  testing_guidelines.md
examples/applications/: CMakeLists.txt  grid_alltoall_plugin.cpp  my_num_numa_nodes_plugin.cpp  top_k_reduce_example.cpp  ulfm.cpp
examples/usage/: CMakeLists.txt  allgather_example.cpp  allgatherv_example.cpp  alltoall_example.cpp  alltoallv_example.cpp  bcast_example.cpp  datatype_example.cpp  gather_example.cpp  gatherv_example.cpp  helpers_for_examples.hpp  named_parameter_selection_example.cpp  reduce_example.cpp  request_pool_example.cpp  scatter_example.cpp  serialization_example.cpp  timer_example.cpp
githooks/: post-merge
include/__mping/: allocator.hpp  assertion_levels.hpp  builtin_types.hpp  checking_casts.hpp  communicator.hpp  data_buffer.hpp  environment.hpp  error_handling.hpp  group.hpp  has_member.hpp  implementation_helpers.hpp  kabool.hpp  mpi_constants.hpp  mpi_datatype.hpp  mpi_ops.hpp  named_parameter_check.hpp  named_parameter_filtering.hpp  named_parameter_selection.hpp  named_parameter_types.hpp  named_parameters.hpp  noexcept.hpp  operation_builder.hpp  parameter_objects.hpp  rank_ranges.hpp  request.hpp  request_pool.hpp  result.hpp  serialization.hpp  span.hpp  (+1 more)
tests/: CMakeLists.txt  allocator_test.cpp  checking_casts_test.cpp  data_buffer_compilation_failures_test.cpp  data_buffer_test.cpp  environment_init_finalize_if_necessary_test.cpp  environment_init_finalize_test.cpp  environment_test.cpp  has_member_test.cpp  helpers_for_testing.hpp  helpers_for_testing_mpi_test.cpp  helpers_for_testing_test.cpp  hooks_test.cpp  implementation_helpers_test.cpp  legacy_parameter_objects.hpp  mpi_communicator_test.cpp  mpi_datatype_test.cpp  mpi_datatype_unsupported_types_test.cpp  mpi_group_test.cpp  mpi_operation_wrapper_test.cpp  mpi_operations_test.cpp  mpi_status_test.cpp  named_parameter_check_common.hpp  named_parameter_check_compilation_failures_test.cpp  named_parameter_check_test.cpp  named_parameter_selection_compilation_failures_test.cpp  named_parameter_selection_test.cpp  named_parameters_compilation_failure_test.cpp  named_parameters_mpi_test.cpp  named_parameters_test.cpp  nonblocking_result_test.cpp  operation_builder_compilation_failures_test.cpp  operation_builder_test.cpp  parameter_objects_test.cpp  plugins_test.cpp  rank_ranges_test.cpp  request_pool_test.cpp  request_test.cpp  request_test_overriding_test_and_wait.cpp  required_type_compilation_failure_test.cpp  (+7 more)
(+106 files in other folders)
